interaction background.js with popup.js

--- a/Timer/manifest.json
+++ b/Timer/manifest.json
@@ -8,5 +8,9 @@
     "default_icon": "timer.png"
   },
   "host_permissions": ["https://*.www.acmicpc.net/"],
-  "permissions": ["activeTab"]
+  "permissions": ["activeTab"],
+  "background": {
+    "scripts": ["background.js"],
+    "persistent": false
+  }
 }
