--- a/Timer/manifest.json
+++ b/Timer/manifest.json
@@ -1,11 +1,13 @@
 {
   "manifest_version": 3,
-  "name": "Timer",
+  "name": "Timer for Baekjoon",
   "version": "1.0",
-  "description": "Timer for algorithm",
-  "action": {
-    "default_popup": "popup.html",
-    "default_icon": "timer.png"
+  "description": "코딩 테스트를 준비하는 사람들을 위한 백준 타이머",
+  "icons": {
+    "16": "16.png",
+    "32": "32.png",
+    "48": "48.png",
+    "128": "128.png"
   },
   "host_permissions": ["https://*/*"],
   "permissions": ["activeTab", "tabs", "scripting"],
