add style for timer

--- a/Timer/manifest.json
+++ b/Timer/manifest.json
@@ -18,7 +18,7 @@
     {
       "matches": ["*://*/academic/problem/*"],
       "js": ["content-script.js"],
-      "runAt": "document_start"
+      "runAt": "document_end"
     }
   ]
 }
